Deleted unnecessary code.