@@ -4,7 +4,6 @@ import net.sourceforge.fenixedu.applicationTier.Service;
 import net.sourceforge.fenixedu.applicationTier.Servico.exceptions.FenixServiceException;
 import net.sourceforge.fenixedu.domain.CurricularCourse;
 import net.sourceforge.fenixedu.domain.Degree;
-import net.sourceforge.fenixedu.persistenceTier.ExcepcaoPersistencia;
 
 /**
  * @author Tânia Pousão Create on 3/Dez/2003
@@ -12,53 +11,18 @@ import net.sourceforge.fenixedu.persistenceTier.ExcepcaoPersistencia;
 public class CourseOfTheExpectedDegree extends Service {
 
 	public Boolean run(Integer curricularCourseCode, String degreeCode) throws FenixServiceException {
-		boolean result = false;
-
-		try {
-			result = CurricularCourseDegree(curricularCourseCode, degreeCode)
-					&& CurricularCourseNotBasic(curricularCourseCode);
-
-		} catch (Exception e) {
-			e.printStackTrace();
-			throw new FenixServiceException(e);
-		}
-
-		return new Boolean(result);
+		return Boolean.valueOf(CurricularCourseDegree(curricularCourseCode, degreeCode) && CurricularCourseNotBasic(curricularCourseCode));
 	}
 
-	/**
-	 * @param argumentos
-	 * @return
-	 * @throws ExcepcaoPersistencia
-	 */
-	private boolean CurricularCourseDegree(Integer curricularCourseCode, String degreeCode)
-			throws FenixServiceException, ExcepcaoPersistencia {
-		boolean result = false;
-
-		CurricularCourse curricularCourse = null;
-		Degree degree = null;
-
-		curricularCourse = (CurricularCourse) rootDomainObject.readDegreeModuleByOID(curricularCourseCode);
-
-		degree = curricularCourse.getDegreeCurricularPlan().getDegree();
-
-		result = degree.getSigla().equals(degreeCode);
-
-		return result; // codigo do curso de Aeroespacial
+	private boolean CurricularCourseDegree(Integer curricularCourseCode, String degreeCode)  {
+		CurricularCourse curricularCourse = (CurricularCourse) rootDomainObject.readDegreeModuleByOID(curricularCourseCode);
+		Degree degree = curricularCourse.getDegreeCurricularPlan().getDegree();
+		return degree.getSigla().equals(degreeCode);
 	}
 
-	/**
-	 * @param argumentos
-	 * @return
-	 * @throws ExcepcaoPersistencia 
-	 */
-	private boolean CurricularCourseNotBasic(Integer curricularCourseCode) throws FenixServiceException, ExcepcaoPersistencia {
-		boolean result = false;
-		CurricularCourse curricularCourse = null;
-
-		curricularCourse = (CurricularCourse) rootDomainObject.readDegreeModuleByOID(curricularCourseCode);
-		result = curricularCourse.getBasic().equals(Boolean.FALSE);
-
-		return result;
+	private boolean CurricularCourseNotBasic(Integer curricularCourseCode) {
+		CurricularCourse curricularCourse = (CurricularCourse) rootDomainObject.readDegreeModuleByOID(curricularCourseCode);
+		return curricularCourse.getBasic() == Boolean.FALSE;
 	}
+
 }
